# env-resolver

./: README.md
.github/workflows/: ci.yml  deploy.yml  node-ci.yml  node-prs.yml  prs.yml  python-ci.yml  python-prs.yml
node/: README.md  package.json  tsconfig.json
node/src/: index.ts
python/: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
python/env_resolver/: main.py
python/test/: main_test.py
